[UPDATE]use shared preference login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
         <item>Laki-laki</item>
         <item>Perempuan</item>
     </string-array>
+
+
+    <string name="shared_preference_name">com.playup.shared.preference</string>
+    <string name="username_key">USERNAME</string>
+    <string name="login_method_key">LOGIN_METHOD</string>
+    <string name="default_value">DEFAULT</string>
 </resources>
