--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,12 @@
 
 
     <string name="shared_preference_name">com.playup.shared.preference</string>
+    <string name="id_key">ID</string>
+    <string name="photo_key">PHOTO</string>
     <string name="username_key">USERNAME</string>
+    <string name="username_full_name_key">USERNAME_FULL_NAME</string>
+    <string name="gender_key">GENDER</string>
+    <string name="email_key">EMAIL</string>
     <string name="login_method_key">LOGIN_METHOD</string>
     <string name="default_value">DEFAULT</string>
 </resources>
