--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">PlayUp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="gender_prompt">Pilih Jenis Kelamin</string>
-    <string-array name="gender_arrays">
-        <item>Laki-laki</item>
-        <item>Perempuan</item>
+
+    <string name="change_photo_prompt">Pilih</string>
+    <string-array name="change_photo_arrays">
+        <item>Ambil Gambar</item>
+        <item>Buka Galeri</item>
     </string-array>
 
 
