--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
         <item>Buka Galeri</item>
     </string-array>
 
-
+    <string name="authority_key">com.app.playup.fileprovider</string>
     <string name="shared_preference_name">com.playup.shared.preference</string>
     <string name="id_key">ID</string>
     <string name="photo_key">PHOTO</string>
