--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="authority_key">com.app.playup.fileprovider</string>
     <string name="shared_preference_name">com.playup.shared.preference</string>
 
-    <string name="id_key">ID</string>
+    <string name="id_key">USER_ID</string>
     <string name="photo_key">PHOTO</string>
     <string name="username_key">USERNAME</string>
     <string name="username_full_name_key">USERNAME_FULL_NAME</string>
